fix: List.of -> Arrays.asList 로 수정