@@ -2,7 +2,7 @@ package lotto;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.List;
+import java.util.Arrays;
 import lotto.domain.Lotto;
 import lotto.domain.LottoNumber;
 import lotto.domain.LottoNumbers;
@@ -12,7 +12,8 @@ import org.junit.jupiter.api.Test;
 public class LottoRankingTest {
 
     private LottoNumbers lottoNumbers = new LottoNumbers(
-        List.of(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+        Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3),
+            new LottoNumber(4),
             new LottoNumber(5), new LottoNumber(6)));
 
     @Test
@@ -26,7 +27,8 @@ public class LottoRankingTest {
     @Test
     public void findSecondRanking() {
         LottoNumbers winningNumbers = new LottoNumbers(
-            List.of(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3),
+                new LottoNumber(4),
                 new LottoNumber(5), new LottoNumber(7)));
         Lotto lotto = new Lotto(lottoNumbers);
         Lotto winningLotto = new Lotto(winningNumbers);
@@ -37,7 +39,8 @@ public class LottoRankingTest {
     @Test
     public void findThirdRanking() {
         LottoNumbers winningNumbers = new LottoNumbers(
-            List.of(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3),
+                new LottoNumber(4),
                 new LottoNumber(7), new LottoNumber(8)));
         Lotto lotto = new Lotto(lottoNumbers);
         Lotto winningLotto = new Lotto(winningNumbers);
@@ -48,7 +51,8 @@ public class LottoRankingTest {
     @Test
     public void findFourthRanking() {
         LottoNumbers winningNumbers = new LottoNumbers(
-            List.of(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(7),
+            Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3),
+                new LottoNumber(7),
                 new LottoNumber(8), new LottoNumber(9)));
         Lotto lotto = new Lotto(lottoNumbers);
         Lotto winningLotto = new Lotto(winningNumbers);
@@ -59,7 +63,8 @@ public class LottoRankingTest {
     @Test
     public void findMissRanking() {
         LottoNumbers winningNumbers = new LottoNumbers(
-            List.of(new LottoNumber(1), new LottoNumber(2), new LottoNumber(7), new LottoNumber(8),
+            Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(7),
+                new LottoNumber(8),
                 new LottoNumber(9), new LottoNumber(10)));
         Lotto lotto = new Lotto(lottoNumbers);
         Lotto winningLotto = new Lotto(winningNumbers);
